--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
     "lib": ["esnext", "dom"],
+    "moduleResolution": "node",
     "strict": true,
-    "outDir": "./dist/",
-    "declaration": true
+    "declaration": false,
+    "removeComments": true
   },
   "include": ["src/**/*.ts", "test/unit/**/*.ts"]
 }
