--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "@unsplash/sum-types": "^0.2.1",
     "fp-ts": "^2.11.0",
     "io-ts": "^2.2.0"
+  },
+  "dependencies": {
+    "io-ts-types": "^0.5.16"
   }
 }
