--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fp-ts-std": "^0.11.0",
     "jest": "^26.6.0",
     "io-ts": "^2.2.0",
+    "io-ts-types": "^0.5.16",
     "monocle-ts": "^2.3.11",
     "newtype-ts": "^0.3.4",
     "prettier": "^2.1.2",
@@ -57,8 +58,5 @@
     "@unsplash/sum-types": "^0.2.1",
     "fp-ts": "^2.11.0",
     "io-ts": "^2.2.0"
-  },
-  "dependencies": {
-    "io-ts-types": "^0.5.16"
   }
 }
